# execd

./: .bumpversion.cfg  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  client.py  pyproject.toml  server.py
.github/workflows/: ci.yml  pypi-publish.yml
src/execd/: __init__.py  __main__.py
src/execd/client/: __init__.py  client.py
src/execd/core/: __init__.py  models.py
src/execd/server/: __init__.py  server.py
tests/: conftest.py  test_cli.py  test_client.py  test_server.py
