[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "execd"
version = "0.1.0"
description = "HTTP REST API execution daemon with Python client library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "prospector[with_ruff,with_mypy]",
    "semgrep",
]
all = ["execd[dev,test,lint]"]

[project.scripts]
execd-server = "execd.server:main"
execd-client = "execd.client:main"

[project.urls]
Homepage = "https://github.com/daedalus/execd"
Repository = "https://github.com/daedalus/execd"
Issues = "https://github.com/daedalus/execd/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/execd"]

[tool.hatch.build.targets.sdist]
include = ["src/execd"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501", "N818"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.prospector]
output-format = "text"
strictness = "medium"
test-warnings = false

[tool.prospector.tools]
ruff = true
mypy = true
pylint = true
pyflakes = false
pycodestyle = false
mccabe = true

[tool.pylint.messages_control]
disable = ["consider-using-with", "unnecessary-pass", "import-outside-toplevel", "unused-import", "protected-access", "import-outside-toplevel", "redefined-builtin", "redefined-outer-name"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
